--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -114,163 +114,6 @@ html, body {
   margin: auto;
 }
 
-.side_menu {
-  display: none;
-  position: fixed;
-  z-index: 150;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  float: right;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(28, 28, 28, 0.4);
-}
-
-.side_menu_area {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 78.125vw;
-  height: 100%;
-  padding: 30px;
-  background-color: #fff;
-}
-.side_menu_area .close_btn {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  width: 40px;
-  height: 40px;
-  background-image: url(../../img/close.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: contain;
-}
-.side_menu_area .close_btn > span {
-  display: block;
-  position: absolute;
-  z-index: -1;
-  clip: rect(0 0 0 0);
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
-
-.side_header {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
-  height: 70px;
-}
-
-.side_language {
-  position: relative;
-  width: 80px;
-  height: 30px;
-  cursor: pointer;
-  margin-bottom: 20px;
-}
-.side_language::before {
-  position: absolute;
-  top: 3px;
-  right: -20px;
-  content: "";
-  display: block;
-  width: 10px;
-  height: 10px;
-  border-left: 2px solid #333;
-  border-bottom: 2px solid #333;
-  transform: rotate(-45deg);
-}
-.side_language::before:hover {
-  outline: 2px solid #1c1c1c;
-  border-radius: 4px;
-}
-.side_language > div {
-  display: none;
-  width: 100%;
-  height: 30px;
-  position: relative;
-  z-index: 10;
-  background-color: #fff1e0;
-  text-align: center;
-}
-.side_language > div.on {
-  display: block;
-  background-color: transparent;
-}
-
-.side_user {
-  display: flex;
-  justify-content: space-between;
-  width: 120px;
-  height: 20px;
-}
-
-.side_menu_part {
-  display: flex;
-  flex-direction: column;
-  margin-top: 30px;
-}
-.side_menu_part > li {
-  margin-bottom: 10px;
-  font-size: 20px;
-  font-weight: 700;
-  text-transform: capitalize;
-}
-.side_menu_part .shop_sub_menu {
-  display: flex;
-  flex-direction: column;
-  padding-top: 10px;
-  padding-left: 20px;
-}
-.side_menu_part .shop_sub_menu > li {
-  margin-bottom: 10px;
-  font-size: 18px;
-  font-weight: 400;
-}
-
-.side_footer_area {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 70px;
-  margin: auto;
-  background-color: #ebebeb;
-}
-
-.side_footer {
-  display: flex;
-  justify-content: space-between;
-  width: 200px;
-  height: 100%;
-  margin: auto;
-}
-.side_footer li {
-  position: relative;
-  width: 100px;
-  height: 100%;
-  font-size: 18px;
-  text-align: center;
-  line-height: 70px;
-}
-.side_footer li:first-child::after {
-  position: absolute;
-  top: 20px;
-  right: 0;
-  content: "";
-  display: block;
-  width: 0.5px;
-  height: 30px;
-  background-color: #333;
-}
-
 @media all and (max-width: 1279px) {
   #headBox {
     height: 19.5vw;
@@ -367,12 +210,12 @@ html, body {
   .hand_language_area li:last-child {
     margin-bottom: 0;
   }
-  .hand_language_area li a {
+  .hand_language_area li button {
     display: block;
     width: 100%;
     height: 100%;
   }
-  .hand_language_area li a:hover {
+  .hand_language_area li button:hover {
     background-color: #e17900;
     color: #ffffff;
   }
@@ -430,6 +273,164 @@ html, body {
     width: 0;
     height: 0;
     overflow: hidden;
+  }
+
+  .side_menu {
+    display: none;
+    position: fixed;
+    z-index: 150;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    float: right;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(28, 28, 28, 0.4);
+  }
+
+  .side_menu_area {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 78.125vw;
+    height: 100%;
+    padding: 30px;
+    background-color: #fff;
+  }
+  .side_menu_area .close_btn {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 40px;
+    height: 40px;
+    background-image: url(../../img/close.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .side_menu_area .close_btn > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+
+  .side_header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 70px;
+  }
+
+  .side_language {
+    position: relative;
+    width: 80px;
+    height: 30px;
+    cursor: pointer;
+    margin-bottom: 20px;
+  }
+  .side_language::before {
+    position: absolute;
+    top: 3px;
+    right: -20px;
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-left: 2px solid #333;
+    border-bottom: 2px solid #333;
+    transform: rotate(-45deg);
+  }
+  .side_language::before:hover {
+    outline: 2px solid #1c1c1c;
+    border-radius: 4px;
+  }
+  .side_language .language_check {
+    width: 100%;
+    height: 30px;
+    text-align: center;
+  }
+  .side_language > div {
+    display: none;
+    width: 100%;
+    height: 30px;
+    position: relative;
+    z-index: 10;
+    background-color: #fff1e0;
+    text-align: center;
+  }
+
+  .side_user {
+    display: flex;
+    justify-content: space-between;
+    width: 120px;
+    height: 20px;
+  }
+
+  .side_menu_part {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+  }
+  .side_menu_part > li {
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: capitalize;
+  }
+  .side_menu_part .shop_sub_menu {
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+    padding-left: 20px;
+  }
+  .side_menu_part .shop_sub_menu > li {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  .side_footer_area {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 70px;
+    margin: auto;
+    background-color: #ebebeb;
+  }
+
+  .side_footer {
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+    height: 100%;
+    margin: auto;
+  }
+  .side_footer li {
+    position: relative;
+    width: 100px;
+    height: 100%;
+    font-size: 18px;
+    text-align: center;
+    line-height: 70px;
+  }
+  .side_footer li:first-child::after {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    content: "";
+    display: block;
+    width: 0.5px;
+    height: 30px;
+    background-color: #333;
   }
 }
 @media all and (min-width: 1280px) {
@@ -733,21 +734,16 @@ html, body {
   .foot_main_area .foot_main_btn li {
     position: relative;
     margin-right: 15px;
-    padding-right: 4vw;
+  }
+  .foot_main_area .foot_main_btn .dot {
+    width: 3px;
+    height: 3px;
+    background-color: #ebebeb;
+    transform: translateY(12px);
   }
   .foot_main_area .foot_main_btn li:last-child {
     margin-right: 0;
     padding-right: 0;
-  }
-  .foot_main_area .foot_main_btn li::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 3px;
-    height: 3px;
-    background-color: #ebebeb;
   }
   .foot_main_area .foot_main_btn li:last-child::after {
     display: none;
@@ -788,7 +784,7 @@ html, body {
     display: block;
     width: 30px;
     height: 30px;
-    background-image: url(../../img/facebook_black.png);
+    background-image: url(../../img/facebook_white.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
@@ -807,7 +803,7 @@ html, body {
     display: block;
     width: 30px;
     height: 30px;
-    background-image: url(../../img/instagram_black.png);
+    background-image: url(../../img/instagram_white.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
@@ -895,21 +891,16 @@ html, body {
   .foot_main_btn li {
     position: relative;
     margin-right: 15px;
-    padding-right: 4vw;
+  }
+  .foot_main_btn .dot {
+    width: 3px;
+    height: 3px;
+    background-color: #ebebeb;
+    transform: translateY(12px);
   }
   .foot_main_btn li:last-child {
     margin-right: 0;
     padding-right: 0;
-  }
-  .foot_main_btn li::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 3px;
-    height: 3px;
-    background-color: #ebebeb;
   }
   .foot_main_btn li:last-child::after {
     display: none;
@@ -1056,22 +1047,17 @@ html, body {
   }
   .foot_main_btn li {
     position: relative;
-    margin-right: 0px;
-    padding-right: 30px;
+    margin-right: 15px;
+  }
+  .foot_main_btn .dot {
+    width: 3px;
+    height: 3px;
+    background-color: #ebebeb;
+    transform: translateY(12px);
   }
   .foot_main_btn li:last-child {
     margin-right: 0;
     padding-right: 0;
-  }
-  .foot_main_btn li::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: calc(50% - 5px);
-    right: 0;
-    width: 3px;
-    height: 3px;
-    background-color: #ebebeb;
   }
   .foot_main_btn li:last-child::after {
     display: none;
@@ -1212,13 +1198,16 @@ html, body {
 
 .event {
   position: relative;
-  width: 300px;
-  height: 380px;
+  width: 39vw;
+  max-width: 300px;
+  height: auto;
+  max-height: 380px;
   margin-bottom: 60px;
 }
 .event .event_img {
-  width: 100%;
-  height: 300px;
+  width: 39vw;
+  height: 39vw;
+  max-height: 300px;
   background-color: #ebebeb;
 }
 .event .event_title {
