--- a/study_code/a_project/scss/src/event_v2.scss
+++ b/study_code/a_project/scss/src/event_v2.scss
@@ -67,11 +67,11 @@ html, body { color: $color_black; font-weight: 400;}
 
 .event {
   position: relative;
-  width: 300px; height: 380px;
+  width: 39vw; max-width: 300px; height: auto; max-height: 380px;
   margin-bottom: 60px;
 
   .event_img {
-    width: 100%; height: 300px;
+    width: 39vw; height: 39vw; max-height: 300px;
     background-color: $color_gray;
   }
   .event_title {
