--- a/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
@@ -10,13 +10,8 @@
 
   .awards_area {
     height: auto;
-
-    // .awards_btn {display: none;}
-    // .awards_btn > div { margin-bottom: -35px;}
-
-    
-    // .awards_indicator { display: none; }
   }// .awards_area
+  
   .awards_btn {
     position: absolute;
     top: calc(50% + 25px); z-index: 1;
@@ -25,8 +20,10 @@
     button {
       position: absolute;
       bottom: 50%;
-      width: 70px; height: 70px;
-      &:hover { background-color: rgba($color_black, 0.4); border-radius: 4px; }
+      width: 10vw; height: 10vw;
+      max-width: 70px; max-height: 70px;
+      min-width: 40px; min-height: 40px;
+      &:hover { background-color: rgba($color_white, 0.4); border-radius: 4px; }
       &:focus { border: 3px solid $color_black; border-radius: 4px; }
     }
     .awards_after_btn {
@@ -47,9 +44,12 @@
     margin-bottom: 40px;
     
     .awards {
-      width: 30vw; height: 30vw;
+      width: 30vw; height: 34vw; min-height: 100px; max-height: 350px;
       // margin: 0 10px;
-      
+      &:nth-child(1), &:nth-child(4){
+        width: 24vw; height: 26vw;
+        transform: translateY(20%);
+      }
       &:nth-child(1)::after {
         content: ""; display: block;
         width: 100%; height: 100%;
@@ -60,7 +60,7 @@
         width: 100%; height: 100%;
         background-color: rgba($color_black, 0.5);
       }
-      &:nth-child(n+5){ display: none;}
+      &:nth-child(n+5){ display: none; opacity: 0;}
     }
   } // .awards_main
 
