--- a/study_code/a_project/scss/src/main/_main_saleBox.scss
+++ b/study_code/a_project/scss/src/main/_main_saleBox.scss
@@ -5,7 +5,7 @@
   margin: auto; margin-top: 20px;
   // padding: 10vw;
   padding: 80px;
-  overflow: hidden;
+  overflow: auto;
 } // #saleBox
 
 .sale_area {
