--- a/study_code/a_project/scss/src/main/_main_awards_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_pc.scss
@@ -44,19 +44,22 @@
       margin: 0 20px;
 
       &:nth-child(1), &:nth-child(5){
-        width: 160px; height: 160px;
+        width: 140px; height: 140px;        
         margin: auto;
+        transform: translateY(20%);
       }
       
       
       &:nth-child(1)::after {
         content: ""; display: block;
         width: 100%; height: 100%;
+        border-radius: 0.25rem;
         background-color: rgba($color_black, 0.5);
       }
       &:nth-child(5)::after {
         content: ""; display: block;
         width: 100%; height: 100%;
+        border-radius: 0.25rem;
         background-color: rgba($color_black, 0.5);
       }
       
