--- a/study_code/b_step_06/src/style/CardList.scss
+++ b/study_code/b_step_06/src/style/CardList.scss
@@ -9,8 +9,7 @@
 
   > h3 { 
     font-size: 1.5rem; font-weight: 700; text-transform:capitalize; 
-    margin-bottom:1rem;
-  }
+    margin-bottom:1rem;}
 }
 
 .card_wrap {
@@ -18,18 +17,17 @@
   justify-content:space-between;
   width: 100%; height: auto;
 
-  >li {
-    width: 250px; height: 350px; 
+  >li {width: 250px; height: 350px; 
     margin-bottom: 1.5rem; padding:0.1rem;
     border:1px solid #777; border-radius: 0.3rem;
     box-shadow:0.1rem 0.1rem 0.1rem rgba(0,0,0,0.3);
-
   @at-root .img_set {
-    display: flex; justify-content: flex-end;
-    align-items: flex-end; align-content: flex-end;
-      width: 100%; height:200px; 
+      display: flex; justify-content: flex-end;
+      align-items:flex-end; align-content:flex-end;
+      width: 100%; height:170px; 
       margin-bottom:1rem; border-radius:0.2rem; 
-      padding: 0.5rem; color: #fff;
+      padding:0.5rem; 
+      color:#fff; text-shadow:0.05rem 0.05rem #333;
       background-color: #ddd;}
 
   dl { 
@@ -37,29 +35,22 @@
     margin-bottom:1rem; padding:0.5rem; 
     border-bottom:1px solid #777;
     } 
-
-  dt { 
-    font-weight: 700;
-    text-transform:capitalize; margin-bottom: 0.3rem;
-  }
-
+  dt { font-weight: 700;
+    text-transform:capitalize; margin-bottom: 0.3rem;}
   dd { font-size: 0.9rem; color:#555;}
       
     .btns {
       display:flex; justify-content:space-between;
       width: 100%; height: auto;
       padding:0 1rem;
-
+      
       label {
-        height: 37px; box-sizing: border-box;
         padding: 0.5rem 1rem; border-radius: 0.3rem;
         cursor: pointer;
-        background-color: #ada;
-      }
-      input:focus + label { 
-        outline: 2px solid #333; 
-        // box-shadow: 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
-      }
+        background-color: #ada;}
+
+      input:focus + label{ box-shadow: 0.1rem 0.1rem 0.1rem rgba(0,0,0,0.7); }
+
       a {
         padding:0.5rem 1rem;  border-radius: 0.3rem;
         background-color: rgb(255, 0, 128);
@@ -71,6 +62,3 @@
 }
 
 
-// 이미지
-// 제목
-// 내용
