--- a/study_code/b_step_06/src/style/Product.scss
+++ b/study_code/b_step_06/src/style/Product.scss
@@ -5,14 +5,11 @@
   box-sizing:border-box;
   margin:3rem auto; background-color: #fff;
 
-  .btn_part {
-    padding: 1rem;
+  .btn_part{ padding: 1rem; 
     >button {
-      margin: 0.1rem 1rem;
-      padding: 0.7rem 1.5rem; 
-      border-radius: 0.25rem; background-color: #0af;
-    }
-    >button:hover { background-color: #057; color: #fff;}
+      margin:0.1rem 1rem; padding:0.7rem 1.5rem; 
+      border-radius:0.25rem; background-color: #0af;}
+    >button:hover{ background-color: #057; color:#fff;}
   }
 
   > h2 { font-size: 1.5rem; margin-bottom: 0.5rem; text-transform:capitalize; color:#057}
@@ -25,9 +22,15 @@
 
   li{ 
     width: 250px; height: 350px;
-    margin:1rem; padding: 1rem;
+    padding: 1rem;
     box-sizing: border-box;
-    background-color: #eee;
+
+    dl{ 
+      width: 100%; height: 100%;
+      padding: 1rem;
+      border:1px solid #777;
+      background-color: #eee;
+    }
   }
 
 }
