[modify] event page error

--- a/study_code/a_project/scss/src/event_v2.scss
+++ b/study_code/a_project/scss/src/event_v2.scss
@@ -4,7 +4,7 @@
 
 @import '../common/mixin';
 @import '../common/variable';
-@import './main/main_common';
+// @import './main/main_common';
 
 html, body { color: $color_black; font-weight: 400;}
 
