--- a/study_code/a_project/scss/src/event_v2.scss
+++ b/study_code/a_project/scss/src/event_v2.scss
@@ -13,6 +13,13 @@ html, body { color: $color_black; font-weight: 400;}
 @import '../common/headBox';
 @import '../common/footBox';
 
+// 1280px ~ ----------------------------------------------------------------
+@media all and (min-width: 1280px){
+  .side_menu { display: none;}
+
+} // 1280px ~ ====================================================================
+
+
 #eventBox {
   width: 100%; height: auto;
   margin-top: 150px;
@@ -71,16 +78,20 @@ html, body { color: $color_black; font-weight: 400;}
   margin-bottom: 60px;
 
   .event_img {
-    width: 39vw; height: 39vw; max-height: 300px;
+    width: 100%; height: 39vw; max-height: 300px;
     background-color: $color_gray;
   }
   .event_title {
     width: 100%; height: 40px;
     line-height: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .event_date {
     width: 100%; height: 40px;
     line-height: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .event_hover {
     display: none;
@@ -94,6 +105,13 @@ html, body { color: $color_black; font-weight: 400;}
   &:hover .event_hover {display: block;}
   & > a:focus .event_hover { display: block; border: 3px solid $color_black;}
 } // .event
+
+.event_con_01 .event_img { @include img('event_01.jpg', $size: cover);}
+.event_con_02 .event_img { @include img('event_02.jpg', $size: cover);}
+.event_con_03 .event_img { @include img('event_03.jpg', $size: cover);}
+.event_con_04 .event_img { @include img('event_04.jpg', $size: cover);}
+.event_con_05 .event_img { @include img('event_05.jpg', $size: cover);}
+.event_con_06 .event_img { @include img('event_06.jpg', $size: cover);}
 
 .event_more {
   position: absolute;
