--- a/study_code/a_project/scss/src/main/_main_event_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_event_handhelds.scss
@@ -57,8 +57,8 @@
     } // a
 
     &:nth-child(2n-1){ margin-left: 0;}
-    &:nth-child(1){ margin-top: 0;}
-    &:nth-child(2){ margin-top: 0;}
+    &:nth-child(1){ margin-top: 5px;}
+    &:nth-child(2){ margin-top: 5px;}
   } // .event
 
 } // ~1279px ===============================================================
