--- a/study_code/a_project/scss/src/main/_main_awards.scss
+++ b/study_code/a_project/scss/src/main/_main_awards.scss
@@ -27,6 +27,7 @@
     position: relative;
     width: 100%; max-width: 1920px; height: 100%;
     margin: auto;
+    overflow: hidden;
   }
 } // .awards_area
 
