--- a/study_code/a_project_02/src/style/section.scss
+++ b/study_code/a_project_02/src/style/section.scss
@@ -38,9 +38,13 @@
     transform: rotate(180deg);
   }
 
-} // .view_01
+} // .view_01 ===============================================================
 
 .view_02 {
   position: relative;
   width: 100%; height: 1176px;
-} // .view_02
+
+  h2 {
+    font-size: 36px;
+  }
+} // .view_02 ===============================================================
