--- a/study_code/a_project_02/src/style/section.scss
+++ b/study_code/a_project_02/src/style/section.scss
@@ -46,5 +46,14 @@
 
   h2 {
     font-size: 36px;
+    margin-bottom: 20px;
+  }
+  .view_02_big{
+    margin-bottom: 80px;
+    font-size: 120px; font-weight: 900;
+
+  }
+  .view_02_normal {
+    font-size: 20px;
   }
 } // .view_02 ===============================================================
