--- a/study_code/a_project_02/src/style/section.scss
+++ b/study_code/a_project_02/src/style/section.scss
@@ -1,4 +1,7 @@
+@charset "UTF-8";
 // section.scss
+
+@import './common/mixin';
 
 #viewBox {
   width: 100%; max-width: 1920px; height: auto;
@@ -44,6 +47,11 @@
   position: relative;
   width: 100%; height: 1176px;
 
+  // text뒤로 사진이 가기 위해 position 사용
+  .view_02_text_wrap {
+    position: absolute; z-index: 10; top: 200px; left: 0; right: 0;
+    margin: auto;
+  }
   h2 {
     font-size: 36px;
     margin-bottom: 20px;
@@ -55,5 +63,22 @@
   }
   .view_02_normal {
     font-size: 20px;
+  }
+  
+
+  .circle_01 {
+    position: absolute; top: 0; right: -10px;
+    width: 419px; height: 424px;
+    @include img('circle_img.png');
+  }
+  .circle_02 {
+    position: absolute; left: -77px; bottom: 350px;
+    width: 300px; height: 300px;
+    @include img('circle_big.svg');
+  }
+  .circle_03 {
+    position: absolute; left: 200px; bottom: 250px;
+    width: 77px; height: 61px;
+    @include img('circle_small.svg');
   }
 } // .view_02 ===============================================================
