[add] navigation 클릭시 underline 생성

--- a/study_code/a_project_dalkomm/src/style/navigation.scss
+++ b/study_code/a_project_dalkomm/src/style/navigation.scss
@@ -4,8 +4,15 @@
   display: flex; justify-content: space-between;
   width: 780px; height: 120px;
   font-size: 18px; font-weight: 700;
-  line-height: 120px;
+  // line-height: 120px;
   li {
-    width: auto; height: 100%;
+    width: auto; height: 30px; margin: auto;
   }
+}
+
+.underline {
+  position: absolute; top: 0; left: 0;
+  width: 0; height: 2px;
+  background-color: #ff592e;
+  transition: all 500ms;
 }
