--- a/study_code/a_project_dalkomm/src/style/common/reset.scss
+++ b/study_code/a_project_dalkomm/src/style/common/reset.scss
@@ -28,7 +28,7 @@ form, fieldset, textarea, select {
 ul,ol { list-style:none; }
 hr {width: 100%; border:0; border-bottom:0.0625rem solid #505050; }
 a { color:inherit; text-decoration: none; }
-a:hover { text-decoration: underline; }
+a:hover { text-decoration: none; }
 button { border:0; background-color: transparent; cursor: pointer; border-radius:0;}
 em,address, i { font-style:normal; }
 abbr { text-decoration: none; }
