--- a/study_code/a_project_dalkomm/src/style/header.scss
+++ b/study_code/a_project_dalkomm/src/style/header.scss
@@ -1,19 +1,23 @@
+@charset "UTF-8";
 // header.scss
+
+@import './common/mixin';
 
 #headBox {
   width: 100%; max-width: 1920px; height: 120px;
   margin: auto; 
   background-color: #fbf4e4;
+}
 
-  .head_area{
-    display: flex; justify-content: space-between;
-    align-items: center;
-    width: 80%; max-width: 1920px; height: 120px;
-    margin: auto;
+.head_area{
+  display: flex; justify-content: space-between;
+  align-items: center;
+  width: 80%; max-width: 1920px; height: 120px;
+  margin: auto;
 
-    h1 {
-      width: 117px; height: 30px;
-      background-image: url('../image/dalkomm.svg');
-    }
+  h1 {
+    width: 117px; height: 30px;
+    background-image: url('../image/dalkomm.svg');
+    a { @include full;}
   }
 }
