--- a/study_code/a_project_dalkomm/src/style/common/_mixin.scss
+++ b/study_code/a_project_dalkomm/src/style/common/_mixin.scss
@@ -21,3 +21,11 @@ $imgPath:'../image/';
   }
   @content;
 }
+
+@mixin full($file:false, $repeat:no-repeat, $position:50% 50%, $size:initial){
+  display:block; width:100%; height:100%;
+  
+  @if ($file) {
+    @include img($file, $repeat, $position, $size){      @content;    }
+  }
+}
