--- a/study_code/a_project_dalkomm/src/style/navigation.scss
+++ b/study_code/a_project_dalkomm/src/style/navigation.scss
@@ -7,7 +7,10 @@
   // line-height: 120px;
   li {
     width: auto; height: 30px; margin: auto;
-    &:hover, &:focus {
+    &:hover {
+      color: #ff592e;
+    }
+    a:focus {
       color: #ff592e;
     }
   }
