--- a/study_code/a_project_dalkomm/src/style/footer.scss
+++ b/study_code/a_project_dalkomm/src/style/footer.scss
@@ -1,9 +1,10 @@
 // footer.scss
+@import './common/variable';
 
 #footBox {
   width: 100%; height: auto; min-height: 700px;
   padding: 120px;
-  background-color: #fff;
+  background-color: $color_white;
 }
 
 .footer_wrap {
@@ -13,7 +14,7 @@
 
 .footer_for {
   margin-top: 30px;
-  color: rgba(34,34,34,.7);
+  color: $color_deep_gray;
   li {
     margin-top: 16px;
     &:first-child {margin-top: 0;}
@@ -21,5 +22,40 @@
 }
 
 .footer_contact {
-  color: #ff592e;
+  color: $color_primary;
+}
+
+// ---------------------------------------------------------------------------
+
+.footer_info_wrap {
+  display: flex; justify-content: space-between;
+  width: 100%; height: auto;
+  margin-top: 50px;
+  padding: 50px 0;
+  border-top: 1px solid #ddd;
+}
+
+.footer_family {
+  width: 300px; height: 80px;
+  border-bottom: 2px solid $color_black;
+  text-align: left;
+  
+  select {
+    width: 100%; height: 100%;
+    font-size: 18px; font-weight: bold;
+    line-height: 80px;
+  }
+}
+
+.footer_infomation {
+  width: auto; height: 80px;
+  padding-top: 20px;
+  text-align-last: left;
+  font-size: 14px;
+  font-weight: 400;
+  color: $color_deep_gray;
+}
+
+.footer_infomation a {
+  color: $color_black;
 }
