--- a/study_code/a_project_dalkomm/src/style/navigation.scss
+++ b/study_code/a_project_dalkomm/src/style/navigation.scss
@@ -3,7 +3,7 @@
 .gnb ul {
   display: flex; justify-content: space-between;
   width: 780px; height: 120px;
-  font-size: 18px; font-weight: 700;
+  font-size: 18px; font-weight: bold;
   // line-height: 120px;
   li {
     width: auto; height: 30px; margin: auto;
