--- a/study_code/a_project_dalkomm/src/style/footer.scss
+++ b/study_code/a_project_dalkomm/src/style/footer.scss
@@ -1,5 +1,6 @@
 // footer.scss
 @import './common/variable';
+@import './common/mixin';
 
 #footBox {
   width: 100%; height: auto; min-height: 700px;
@@ -59,3 +60,44 @@
 .footer_infomation a {
   color: $color_black;
 }
+
+.footer_download {
+  display: flex; justify-content: start;
+  width: auto; height: 50px;
+  margin-top: 30px;
+  line-height: 50px; 
+  font-size: 16px;
+
+  .footer_btn_appstore {
+    width: 200px; height: 50px;
+    border: 1px solid $color_deep_gray;
+    border-radius: 50px;
+    font-size: 16px;
+    font-weight: 700;
+
+    .apple_icon {
+      font-size: 30px;
+      margin-right: 20px;
+    }
+  }
+
+  .footer_btn_googleplay{
+    width: 200px; height: 50px;
+    margin-left: 10px;
+    border: 1px solid $color_deep_gray;
+    border-radius: 50px;
+    font-size: 16px;
+    font-weight: 700;
+
+    .google_icon {
+      font-size: 25px;
+      margin-right: 20px;
+    }
+  }
+
+  .footer_btn_qr {
+    width: 50px; height: 50px;
+    margin-left: 10px;
+    @include img('img-qr.png');
+  }
+} // .footer_download
