[add] footer부분 hover - animation 적용 전

--- a/study_code/a_project_dalkomm/src/style/common/reset.scss
+++ b/study_code/a_project_dalkomm/src/style/common/reset.scss
@@ -1,12 +1,11 @@
 @charset "UTF-8";
 /* reset.css */
-// @import "./variable","./mixin";
 // @use 불러오는 기능도 있으니 체크
-
+@import './variable';
 
 :root{
   font-size: 16px;
-  color: rgb(34, 34, 34);
+  color: $color_black;
   font-family: 'Spoqa Han Sans';
 }
 
