--- a/study_code/a_project_dalkomm/src/style/footer.scss
+++ b/study_code/a_project_dalkomm/src/style/footer.scss
@@ -19,12 +19,39 @@
   li {
     margin-top: 16px;
     &:first-child {margin-top: 0;}
+    a { position: relative; }
+    
   }
 }
 
 .footer_contact {
   color: $color_primary;
+  a { position: relative; }
+
+  a:hover::after{
+    position: absolute; bottom: 0; left: 0;
+    display: block; content: ""; 
+    width: 100%; height: 1px;
+    background-color: $color_primary;
+    transition: all 500ms ease;
+  }
 }
+
+// hover 관련
+.footer_customer li:last-child,
+.footer_partner,
+.footer_privacy {
+  a:hover::after {
+    position: absolute; bottom: 0; left: 0;
+    display: block; content: "";
+    width: 100%; height: 1px;
+    background-color: $color_black;
+  }
+  a:hover {
+    color: $color_black;
+  }
+}
+
 
 // ---------------------------------------------------------------------------
 
