--- a/study_code/a_project_dalkomm/src/style/navigation.scss
+++ b/study_code/a_project_dalkomm/src/style/navigation.scss
@@ -1,17 +1,21 @@
 // navigation.scss
+@import './common/variable';
 
 .gnb ul {
   display: flex; justify-content: space-between;
   width: 780px; height: 120px;
-  font-size: 18px; font-weight: bold;
   // line-height: 120px;
   li {
     width: auto; height: 30px; margin: auto;
+    
     &:hover {
-      color: #ff592e;
+      color: $color_primary;
     }
     a:focus {
-      color: #ff592e;
+      color: $color_primary;
+    }
+    a {
+      font-size: 18px; font-weight: bold;
     }
   }
 }
@@ -19,6 +23,6 @@
 .underline {
   position: absolute; top: 80px; left: 0;
   width: 0; height: 2px;
-  background-color: #ff592e;
+  background-color: $color_primary;
   transition: all 500ms;
 }
