--- a/study_code/a_project_dalkomm/src/style/footer.scss
+++ b/study_code/a_project_dalkomm/src/style/footer.scss
@@ -19,25 +19,26 @@
   li {
     margin-top: 16px;
     &:first-child {margin-top: 0;}
-    a { position: relative; }
+    a { 
+      position: relative; // after를 위한 코드
+      transition: all 500ms ease-in-out;
+    }
     
   }
 }
 
 .footer_contact {
   color: $color_primary;
-  a { position: relative; }
 
   a:hover::after{
     position: absolute; bottom: 0; left: 0;
     display: block; content: ""; 
     width: 100%; height: 1px;
     background-color: $color_primary;
-    transition: all 500ms ease;
   }
 }
 
-// hover 관련
+// hover 관련 - 문의하기 제외
 .footer_customer li:last-child,
 .footer_partner,
 .footer_privacy {
